--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
