--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
     "husky": "^9.0.1",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
