--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "jest",
     "setup-db": "psql -f db/setup-db.sql",
@@ -27,6 +27,7 @@
     "husky": "^9.0.1",
     "jest": "^29.7.0",
     "pg-format": "^1.0.4",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "uuid": "^9.0.1"
   }
 }
