--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand",
     "setup-db": "psql -f db/setup-db.sql",
     "seed": "node db/run-seed.js",
     "playground": "psql -f playground.sql > playground.txt",
