--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "husky": "^9.0.1",
     "jest": "^29.7.0",
     "pg-format": "^1.0.4",
-    "supertest": "^6.3.4",
-    "uuid": "^9.0.1"
+    "supertest": "^6.3.4"
   }
 }
