--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "setup-db": "psql -f db/setup-db.sql",
     "seed": "node db/run-seed.js",
     "seed-prod": "NODE_ENV=production node db/run-seed.js",
-    "playground": "psql -f playground.sql > playground.txt"
+    "playground": "psql -f playground.sql > playground.txt",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
