--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "setup-db": "psql -f db/setup-db.sql",
     "seed": "node db/run-seed.js",
     "seed-prod": "NODE_ENV=production node db/run-seed.js",
-    "playground": "psql -f playground.sql > playground.txt"
+    "playground": "psql -f playground.sql > playground.txt",
+    "husky": "prepare"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +25,10 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-format": "^1.0.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "husky": "^9.0.1"
   },
   "devDependencies": {
-    "husky": "^9.0.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.4"
   }
