--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "jest --runInBand",
-    "start": "psql -f db/setup-db.sql node db/run-seed.js node listen.js",
+    "start": "psql -f db/setup-db.sql",
     "setup-db": "psql -f db/setup-db.sql",
     "seed": "node db/run-seed.js",
     "seed-prod": "NODE_ENV=production node db/run-seed.js",
