added patch practice endpoint

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "prepare": "husky"
   },
   "keywords": [],
+  "jest": {
+    "globalSetup": "./global-setup.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
